
PROJECT (WRITE-PV-FILES C CXX)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

### Try to find MPI ###
FIND_PACKAGE (MPI REQUIRED)

INCLUDE_DIRECTORIES (BEFORE ${MPI_C_INCLUDE_PATH})
INCLUDE_DIRECTORIES (BEFORE ${MPI_CXX_INCLUDE_PATH})

SET (SRC_MAIN
${CMAKE_CURRENT_SOURCE_DIR}/zlib_wrapper.cpp
${CMAKE_CURRENT_SOURCE_DIR}/vtr_wrapper.cpp
${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

### Compile additional libraries here ###

### Zlib ###
SET (ZLIB_FILES_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/zlib/zlib-1.2.8")
INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/zlib/CMakeLists.txt")

### Generate executable for main program ###
ADD_EXECUTABLE( main ${SRC_MAIN} )
TARGET_LINK_LIBRARIES( main ${ZLIB_LIBRARY} ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES} m )

