
INCLUDE_DIRECTORIES (BEFORE "${ZLIB_FILES_PREFIX}")

SET (SRC_ZLIB_PUBLIC_HDRS
${ZLIB_FILES_PREFIX}/zconf.h
${ZLIB_FILES_PREFIX}/zlib.h
)

SET (SRC_ZLIB_PRIVATE_HDRS
${ZLIB_FILES_PREFIX}/crc32.h
${ZLIB_FILES_PREFIX}/deflate.h
${ZLIB_FILES_PREFIX}/gzguts.h
${ZLIB_FILES_PREFIX}/inffast.h
${ZLIB_FILES_PREFIX}/inffixed.h
${ZLIB_FILES_PREFIX}/inflate.h
${ZLIB_FILES_PREFIX}/inftrees.h
${ZLIB_FILES_PREFIX}/trees.h
${ZLIB_FILES_PREFIX}/zutil.h
)

SET (SRC_ZLIB
${ZLIB_FILES_PREFIX}/adler32.c
${ZLIB_FILES_PREFIX}/compress.c
${ZLIB_FILES_PREFIX}/crc32.c
${ZLIB_FILES_PREFIX}/deflate.c
${ZLIB_FILES_PREFIX}/gzclose.c
${ZLIB_FILES_PREFIX}/gzlib.c
${ZLIB_FILES_PREFIX}/gzread.c
${ZLIB_FILES_PREFIX}/gzwrite.c
${ZLIB_FILES_PREFIX}/inflate.c
${ZLIB_FILES_PREFIX}/infback.c
${ZLIB_FILES_PREFIX}/inftrees.c
${ZLIB_FILES_PREFIX}/inffast.c
${ZLIB_FILES_PREFIX}/trees.c
${ZLIB_FILES_PREFIX}/uncompr.c
${ZLIB_FILES_PREFIX}/zutil.c
)

ADD_LIBRARY(zlib SHARED ${SRC_ZLIB} ${SRC_ZLIB_PRIVATE_HDRS} ${SRC_ZLIB_PUBLIC_HDRS})
SET(ZLIB_LIBRARY zlib)
